[package]
name = "test_storm_detect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
nalgebra = "0.31"
reqwest = { version = "0.11", features = ["blocking"] }
chrono = "0.4"
imageproc = "0.23.0"
once_cell = "1.17.1"
rusttype = "0.9.2"        # For font handling